--- a/Web/styles.css
+++ b/Web/styles.css
@@ -14,6 +14,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    height: 100%;
+}
+
 
 /* Navigation bar */
 nav .container {
@@ -34,6 +38,13 @@ nav .container {
 }
 
 /* Home : index.html */
+.landing-section button {
+   margin-top: 1em;
+   background-color: #00CF98;
+   width: 120px;
+   color: white;
+}
+
 .landing-section .container {
     margin-top: 5em;
     max-width: 1100px;
@@ -96,7 +107,7 @@ nav .container {
   .slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
-    background: #4CAF50;
+    background: #00CF98;
     cursor: pointer;
   }
 
@@ -106,7 +117,7 @@ nav .container {
 
   .data-section {
       background-color: black;
-      margin-top: 5em;
+      margin-top: 4em;
   }
 
   .data-section .container {
@@ -163,13 +174,53 @@ nav .container {
   }
 
 /* How it works : works.html */
+.about-us-header .container {
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 3em;
+}
+
+.about-us-header h1 {
+    color: #00CF98;
+    font-weight: 700;
+}
+
+.about-us-description {
+    background-color: black;
+    margin-top: 3em;
+}
+
+.about-us-description .container {
+    padding-top: 3em;
+    padding-bottom: 3em;
+    max-width: 1100px;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#person-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#person-container img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+#person-container h5{
+    padding-top: 0.5em;
+}
 
 
 /* Footer */
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
     margin-bottom: 0.25em;
 }
 
